# EdgeX-Dell-J1939

./: .gitmodules  CMakeLists.txt  README.md  USER_README.md
res/: J1939SimulatorProfile.yaml  configuration.toml
scripts/: Dockerfile.alpine-3.8  build.sh  build_deps.sh
src/c/: CMakeLists.txt  j1939_appl.c  main.c
src/c/inc/: j1939_appl.h
